fix: contrast on tags

--- a/blocks/blog-feed/blog-feed.css
+++ b/blocks/blog-feed/blog-feed.css
@@ -64,7 +64,7 @@ main .blog-feed .blog-post-card .blog-post-content .post-tags {
 }
 
 main .blog-feed .blog-post-card .blog-post-content .post-tags a {
-  color: #b3b2b2;
+  color: #5A5858;
   font-size: 15px;
 }
 
